# Lighter

./: Cargo.toml  LICENSE  README.md  model.model  model4.model  model5.model  test.model  test.weights
data/clock/: SOURCE.MD  clock_time.npy
docs/: attention.MD  autoencoder.MD  embedding.MD  featuredatastructure.MD  finetuning.MD  layerintegration.MD  masking.MD  modelmerging.MD  moe.MD  reinforcement.MD  transformers.MD
lib/: activations.rs  convolutiontypes.rs  densetypes.rs  embeddingtypes.rs  layers.rs  losses.rs  mod.rs  models.rs  optimizers.rs  parallelmodel.rs  parallelmodeltypes.rs  poolingtypes.rs  prelude.rs  recurrenttypes.rs  saveweightstype.rs  sequentialmodel.rs  serializationtensor.rs  topk.rs  utils.rs
lib/examples/: mod.rs  simple_cnn.rs  simple_dnn.rs  simple_enn.rs  simple_llm.rs  simple_pnn.rs  simple_rnn.rs  simple_s2s.rs  simple_tnn.rs
lib/layer/: convolutionlayer.rs  denselayer.rs  embeddinglayer.rs  flatten.rs  mod.rs  normalizationlayer.rs  poolinglayer.rs  recurrentlayer.rs  selfattention.rs  sparsemoe.rs
lib/layer/transformers/: berthiddenacttype.rs  bertlayer.rs  bertmodel.rs  bertpositionembdtypes.rs  llamamodel.rs  mod.rs  tokeoutputstream.rs  transformermodels.rs
lib/preprocessing/: features.rs  featurescaling.rs  mod.rs
src/: main.rs
tests/: test_importexport.rs  test_layer.rs  test_preprocessing.rs
