[package]
name = "candlelighter"
version = "0.1.0"
edition = "2021"
authors = ["Dirk Bangel <dirk.bangel@gmx.de>"]
description = "A Keras like abstraction layer on top of the Rust ML framework candle"
readme = "README.md"
documentation = "https://github.com/BDUG/Lighter"
homepage = "https://github.com/BDUG/Lighter"
repository= "https://github.com/BDUG/Lighter"
license = "MPL-2.0"
license-file = "LICENSE"
keywords = ["machine","learning","ML","candle","KERAS"]
categories = ["science", "hardware-support","development-tools","computer-vision","algorithms"]
exclude = [".github/", ".*", ".vscode/","target/*"]

[lib]
name = "candlelighter"
path = "./lib/mod.rs"

[dependencies]
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-rand = "0.14.0"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
savefile="0.11"
savefile-derive="0.11"
candle-core = "0.3.2"
candle-nn = "0.3.2"
serde_json = "1.0.109"
anyhow = "1.0.79"
terminal-menu = "3.0.0"
